# LOB

./: .gitignore  CMakeLists.txt  COVERAGE.md  OPTIMIZATION_ANALYSIS.md  PROFILING_QUICKSTART.md  README.md  ROADMAP.md  ROADMAP_ABMS.md  imgui.ini
benchmarks/: MatchingEngineBenchmark.cpp  ProfilingBenchmark.cpp  ScenarioBenchmark.cpp  TickToTradeBenchmark.cpp
build_test/: DartConfiguration.tcl  Makefile  lob_tests[1]_include.cmake  lob_tests[1]_tests.cmake
data/: sample_binance_depth.ndjson  sample_coinbase_l2.ndjson
docs/: POPULATION_SCENARIOS.md  VISUALIZATION_AND_BENCHMARKS.md  WEEK5_CONCURRENCY.md
include/agents/: Agent.h  AgentOrchestrator.h  AgentZoo.h  MarketMaker.h  MarketState.h  MeanReverter.h  NoiseTrader.h  TrendFollower.h  Whale.h
include/analytics/: OHLCVAggregator.h  PatternScanner.h
include/benchmarks/: LatencyStats.h
include/concurrency/: OrderEntryGateway.h  RingBuffer.h
include/core/: MatchingEngine.h  Order.h  OrderBook.h
include/market_data/: CryptoDataReplay.h  MarketDataPublisher.h  WebSocketClient.h
include/memory/: ObjectPool.h
include/profiling/: HotPathProfiler.h  MemoryProfiler.h
include/ui/: AgentConfigPanel.h  CandlestickChart.h  StatsDashboard.h
include/visualization/: DepthChartViewer.h
profiling_results/: PROFILING_MASTER_REPORT.md  benchmark_console_output.txt  heap_analysis.txt  profiling_hotpath_report.txt  profiling_memory_report.txt  standard_benchmark_output.txt
scripts/: generate_coverage.sh  run_profiling.sh
src/: main.cpp  main_abms.cpp
src/agents/: Agent.cpp  AgentOrchestrator.cpp  AgentZoo.cpp  MarketMaker.cpp  MeanReverter.cpp  NoiseTrader.cpp  PopulationPresets.cpp  TrendFollower.cpp  Whale.cpp
src/analytics/: OHLCVAggregator.cpp  PatternScanner.cpp
src/concurrency/: OrderEntryGateway.cpp  RingBuffer.cpp
src/core/: MatchingEngine.cpp  Order.cpp  OrderBook.cpp
src/market_data/: LiveWebSocketClient.cpp  MarketDataPublisher.cpp
src/memory/: ObjectPool.cpp
src/profiling/: HotPathProfiler.cpp  MemoryProfiler.cpp
src/ui/: AgentConfigPanel.cpp  CandlestickChart.cpp  StatsDashboard.cpp
src/visualization/: DepthChartViewerGL.cpp  main_viewer.cpp
tests/agents/: AgentOrchestratorTest.cpp  AgentTest.cpp  AgentZooTest.cpp  MarketMakerTest.cpp  MeanReverterTest.cpp  NoiseTraderTest.cpp  TrendFollowerTest.cpp  WhaleTest.cpp
tests/analytics/: OHLCVAggregatorTest.cpp  PatternScannerTest.cpp
tests/concurrency/: RingBufferTest.cpp
tests/core/: MatchingEngineTest.cpp  OrderBookTest.cpp  OrderTest.cpp
tests/memory/: ObjectPoolTest.cpp
